using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;


internal class AnimationString
{
    internal static string isMoving = "isMoving";
    internal static string LookX = "LookX";
    internal static string isGrounded= "isGrounded";
    internal static string LookY= "LookY";
    internal static string jump="jump";
    internal static string isOnCeiling= "isOnCeiling";
    internal static string isOnWall= "isOnWall";
}

